--- a/khatabook_Project/views/index.ejs
+++ b/khatabook_Project/views/index.ejs
@@ -8,6 +8,7 @@
     <% files.forEach(function(file){%>
         <h3><%=files %></h3>
         <a href="/edit/<%=file%>">Edit</a>
+        <a href="/delete/<%=file%>">Delete</a>
         <% }) %>
   </body>
 </html>   
